--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -72,6 +72,7 @@
     border-image: url("assets/entry-border-focused-dark.svg") 2 / 2 stretch;
 }
 
+GtkScale.trough,
 GtkSwitch.trough,
 GtkScale.trough.horizontal {
     border-image: url("assets/trough-border-horizontal-dark.svg") 2 / 2 stretch;
@@ -90,10 +91,12 @@ GtkScale.progressbar.vertical {
     border-image: url("assets/trough-active-border-vertical-dark.svg") 2 / 2 stretch;
 }
 
+GtkScale.slider,
 GtkScale.slider.horizontal {
     background-image: url("assets/scale-slider-horizontal-dark.svg");
 }
 
+GtkScale.slider:insensitive,
 GtkScale.slider.horizontal:insensitive {
     background-image: url("assets/scale-slider-horizontal-insensitive-dark.svg");
 }
@@ -172,6 +175,10 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
 .progressbar row:selected,
 .progressbar row:selected:focused {
     border-image: url("assets/progressbar-border-dark.svg") 3 / 3 stretch;
+}
+
+.progressbar.vertical {
+    border-image: url("assets/progressbar-border-vertical-dark.svg") 3 / 3 stretch;
 }
 
 /* TODO: need dark versions */
