--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -64,6 +64,8 @@
     background-image: url("assets/radio-mixed-dark.svg");
 }
 
+GtkProgressBar.trough,
+.trough row,
 .entry {
     border-image: url("assets/entry-border-normal-dark.svg") 2 / 2 stretch;
 }
