--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -25,9 +25,9 @@
 @define-color button_hover_gradient_color_a shade (@button_gradient_color_a, 1.07);
 @define-color button_hover_gradient_color_b @theme_base_color;
 
-@define-color insensitive_bg_color #0b0b0d;
-@define-color insensitive_fg_color #585458;
-@define-color insensitive_border_color shade (@internal_element_color, 0.70);
+@define-color insensitive_bg_color alpha(#0b0b0d, 0.0);
+@define-color insensitive_fg_color alpha(#717171, 0.50);
+@define-color insensitive_border_color alpha(#717171, 0.50);
 
 @define-color inactive_frame_color shade (@theme_bg_color, 1.19);
 
