--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -934,6 +934,8 @@ GtkTreeMenu .menuitem * {
     border-radius: 0;
     border-style: solid;
 
+    -GtkToolbar-button-relief: normal;
+
     padding: 4;
 
     background-image: -gtk-gradient (linear,
@@ -956,11 +958,35 @@ GtkTreeMenu .menuitem * {
 .inline-toolbar.toolbar .button {
     padding: 1;
     icon-shadow: 0 1 @theme_base_color;
+
+    border-image: none;
+    border-color: shade(@button_border, 0.95);
+    border-radius: 0;
+    border-width: 1 0 1 1;
+    border-style: solid;
+
+    box-shadow: inset 1 1 alpha(@theme_base_color, 0.50);
+}
+
+.inline-toolbar.toolbar .button:insensitive {
+    border-color: shade(@button_border, 0.95);
+    box-shadow: none;
 }
 
 .inline-toolbar.toolbar .button *:active,
 .inline-toolbar.toolbar .button *:insensitive {
     icon-shadow: none;
+}
+
+/* nth-child for inline toolbar button groups */
+.inline-toolbar.toolbar GtkToolButton:nth-child(first) .button {
+    border-radius: 3 0 0 3;
+    box-shadow: none;
+}
+
+.inline-toolbar.toolbar GtkToolButton:nth-child(last) .button {
+    border-radius: 0 3 3 0;
+    border-width: 1;
 }
 
 /***********
