--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -104,6 +104,9 @@
 @define-color toolbar_gradient_step2 #d9d9d7;
 @define-color toolbar_gradient_final #e5e5e2;
 
+@define-color toolbar_border_top shade (@theme_bg_color, 0.56);
+@define-color toolbar_border_bottom shade (@theme_bg_color, 0.83);
+
 @define-color toolbar_active_button_color #909081;
 
 @define-color treeview_focus_border @progressbar_border;
