--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -57,11 +57,17 @@
 @define-color button_gradient_color_b #d7dad7;
 @define-color button_border #a7aba7;
 
+@define-color button_active_gradient_color_a #a2a9a2;
+@define-color button_active_gradient_color_b shade (@button_active_gradient_color_a, 0.83);
+
 @define-color button_hover_gradient_color_a @theme_base_color;
 @define-color button_hover_gradient_color_b shade (@button_gradient_color_a, 0.94);
 
-@define-color button_active_gradient_color_a #a2a9a2;
-@define-color button_active_gradient_color_b shade (@button_active_gradient_color_a, 0.83);
+@define-color button_raised_gradient_color_a @button_gradient_color_a;
+@define-color button_raised_gradient_color_b @button_gradient_color_b;
+
+@define-color button_raised_active_gradient_color_a @button_active_gradient_color_a;
+@define-color button_raised_active_gradient_color_b alpha(@button_active_gradient_color_b, 0.13);
 
 @define-color insensitive_bg_color #f4f4f2;
 @define-color insensitive_fg_color #a7aba7;
