--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -58,14 +58,17 @@
 @define-color focused_entry_border @theme_selected_bg_color;
 @define-color focused_entry_inset alpha (@theme_selected_bg_color, 0.50);
 
-@define-color toolbar_gradient_base #080808;
-@define-color toolbar_gradient_step1 #0a0a0a;
-@define-color toolbar_gradient_step2 #111111;
-@define-color toolbar_gradient_final #151515;
+@define-color toolbar_gradient_base #252624;
+@define-color toolbar_gradient_step1 #323331;
+@define-color toolbar_gradient_step2 #444642;
+@define-color toolbar_gradient_final #51534f;
 
 @define-color toolbar_active_button_color #222222;
 @define-color toolbar_border_top #2e3436;
 @define-color toolbar_border_bottom #72756f;
+
+@define-color primary_toolbar_entry_bg #ffffff;
+@define-color primary_toolbar_entry_fg #2e3436;
 
 @define-color expander_row_selected_color alpha (@theme_base_color, 0.60);
 
