entry: tweak border for entries on primary toolbars in the dark theme

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -170,6 +170,10 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 stretch;
 }
 
+.primary-toolbar.toolbar .entry {
+    border-image: url("assets/primary-toolbar-entry-border-normal-dark.svg") 2 / 2 stretch;
+}
+
 .progressbar,
 .entry.progressbar,
 .progressbar row,
