raised-buttons: support raised hints on the button itself
These two configurations for raised buttons should 'just work' with the
theme:
- a raised hint is set on the GtkToolItem, matched by '.raised .button'
- a raised hint is set on a GtkButton, which is packed (possibly
  together with other buttons) in a GtkToolItem, needed for nth-child
  support in complex toolbar layouts. This is matched by
  '.raised.button'.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -185,7 +185,9 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
 }
 
 .primary-toolbar .toolbar .raised .button,
-.primary-toolbar.toolbar .raised .button {
+.primary-toolbar.toolbar .raised .button,
+.primary-toolbar .toolbar .raised.button,
+.primary-toolbar.toolbar .raised.button {
     border-image: url("assets/primary-toolbar-raised-button-border.svg") 4 / 4 stretch;
 }
 
