--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -166,7 +166,9 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
 }
 
 .primary-toolbar .toolbar .raised .button,
-.primary-toolbar.toolbar .raised .button {
+.primary-toolbar.toolbar .raised .button,
+.primary-toolbar .toolbar .raised.button,
+.primary-toolbar.toolbar .raised.button {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 stretch;
 }
 
