dim-label: make the label dim if it's in a selected/focused item
Such as an icon view cell.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1333,6 +1333,12 @@ GtkCalendar.highlight {
     color: mix (@theme_fg_color, @theme_bg_color, 0.50);
 }
 
+.dim-label:focused,
+.dim-label:selected,
+.dim-label:selected:focused {
+    color: mix (@theme_selected_fg_color, @theme_base_color, 0.50);
+}
+
 ApDocView, /* Abiword */
 EogScrollView, /* Eog */
 CheeseThumbView /* Cheese */
