--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -6,4 +6,24 @@ GtkIconView.view.cell:selected:focused {
     border-radius: 10;
     border-width: 3;
     border-color: #d3d7cf;
+
+    /* FIXME: this probably needs to be better;
+     * see https://bugzilla.gnome.org/show_bug.cgi?id=644157
+     */
+    -adwaita-focus-border-color: alpha(@theme_text_color, 0.4);
+    -adwaita-focus-border-radius: 5;
+    -adwaita-focus-border-dashes: true;
+}
+
+.entry {
+    background-image: -gtk-gradient (linear, 
+                                     left top,
+                                     left bottom,
+                                     from(@theme_text_color),
+                                     to(#ffffff));
+    color: #000000;
+}
+
+.entry:insensitive {
+    background-image: none;
 }
