trough: Fix theming for custom widgets (bgo#655682)

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -229,7 +229,7 @@ GtkProgressBar,
     -GtkProgressBar-yspacing: 22;
 }
 
-GtkProgressBar.trough,
+.trough,
 .trough row,
 .trough row:hover {
     background-image: -gtk-gradient (linear,
