toolbars: style toolbars with a menubar class
Like the one in the Documents application.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -786,6 +786,20 @@ GtkTreeMenu .menuitem * {
 }
 
 /********************
+ * Menubar Toolbars *
+ ********************/
+.toolbar.menubar {
+    background-image: -gtk-gradient (linear,
+                                     left top, left bottom,
+                                     from(@theme_bg_color),
+                                     to(shade(@theme_bg_color, 0.96)));
+    border-width: 0;
+    border-style: none;
+
+    -GtkToolbar-button-relief: normal;
+}
+
+/********************
  * Primary Toolbars *
  ********************/
 
