--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -22,6 +22,7 @@
 @define-color menu_fg_color @theme_fg_color;
 @define-color menu_controls_color shade (@theme_fg_color, 0.9);
 @define-color menu_combobox_border #3277bf;
+@define-color menu_separator mix (@menu_fg_color, @menu_bg_color, 0.9);
 
 @define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
