Fix vertical trough progress shading, primary toolbar highlight.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -66,7 +66,7 @@
 
 @define-color toolbar_active_button_color #222222;
 @define-color toolbar_border_top #2e3436;
-@define-color toolbar_border_bottom #72756f;
+@define-color toolbar_border_bottom #5e605b;
 
 @define-color primary_toolbar_entry_bg #ffffff;
 @define-color primary_toolbar_entry_fg #2e3436;
