--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -453,7 +453,7 @@ GtkScrolledWindow.frame {
  **************/
 
 GtkComboBox {
-    padding: 0;
+    padding: 0 0 0 4;
     -GtkWidget-focus-padding: 0;
     -GtkWidget-focus-line-width: 0;
 
